# rewpy

./: LICENSE  README.md  pyproject.toml  rewpy.py
rewpy/: __main__.py
rewpy/src/: cli.py  io.py  tiwary.py
src/: __init__.py  _attempted_click_cli.py  cli.py  io.py  tiwary.py
