# pyproject.toml

[build-system]
# requires = ["setuptools>=65.5.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "rewpy"
version = "0.1.0"
description = "Python-based Metadynamics Reweigthing"
readme = "README.md"
authors = [{ name = "Rhys Evans", email = "rhys.al.evans@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
# calc = "calc.__main__:cli"
